RavenDB-5487 Graph view for /debug/io-metrics - With fix for: RavenDB-6360 (Externalize indexingPerformanceGap) & RavenDB-6376 (Separated dotted time line)

--- a/src/Raven.Studio/wwwroot/Content/css/pages/metrics.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/metrics.less
@@ -35,8 +35,8 @@ rect.pane {
 }
 
 .legendColor {
-    width: 11px;
-    height: 11px;
+    width: 12px;
+    height: 12px;
     display: inline-block;
 }
 
